Fix: change alignment of results for better visability

--- a/src/styles/QuizPage.css
+++ b/src/styles/QuizPage.css
@@ -14,6 +14,7 @@
     .evalContent {
         flex-direction: column;
         margin-right: 0px;
+        gap: 10px !important;
     }
 
     .mainContainer {
@@ -32,7 +33,7 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
-    gap: 20px;
+    gap: 40px;
 }
 
 .evalLeft {
